# pre-commit-mypy-sync

./: .pre-commit-hooks.yaml  LICENSE  pyproject.toml
hooks/: mypy_sync.py
